--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/server": "^4.3.2",
     "@next/font": "13.1.6",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "express": "^4.18.2",
+    "graphql": "^16.6.0",
+    "graphql-helix": "^1.13.0",
+    "graphql-yoga": "^3.5.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
