--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.6",
     "@apollo/server": "^4.3.2",
     "@next/font": "13.1.6",
     "@types/node": "18.11.18",
