--- a/package.json
+++ b/package.json
@@ -8,15 +8,10 @@
     "start": "next start",
     "lint": "next lint",
 		"lint:fix": "eslint . --ext ts --ext tsx --ext js --fix",
-    "cypress:open": "REACT_APP_NODE_ENV=test & npx cypress open",
-		"cypress:run": "REACT_APP_NODE_ENV=test && npx cypress run",
 		"prettier:fix": "prettier --write \"**/*.{ts,tsx,js,jsx}\"",
 		"prettier:check": "prettier --check \"**/*.{ts,tsx,js,jsx}\"",
 		"coverage": "yarn test --coverage --watchAll --collectCoverageFrom=\"src/**/*.{ts,tsx,js,jsx}\"",
-		"prepare": "husky install",
-		"test": "jest --watch",
-		"test:ci": "jest --ci",
-		"test:e2e": "start-server-and-test 'yarn dev' :3002 'yarn cypress:run'"
+		"prepare": "husky install"
   },
   "dependencies": {
     "@next/font": "13.1.6",
