--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "cypress": "^12.5.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "express": "^4.18.2",
