--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -69,11 +69,13 @@
 		"import/prefer-default-export": 0,
 		"react/display-name": 0,
 		"react/prop-types": 0,
+
 		"react/destructuring-assignment": 0,
 		"react/button-has-type": 0,
 		"react/function-component-definition": 0,
 		"react/no-array-index-key": 0,
 		"no-useless-catch": 0,
+		"import/no-extraneous-dependencies": 0,
 		"import/no-unresolved": [2, { "caseSensitive": false }],
 		"react/no-unstable-nested-components": 0,
 		"@typescript-eslint/explicit-function-return-type": 0,
