chore: fix build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,6 @@ jobs:
       - name: Run Lint
         run: |
           echo "Running Lint"
-          bun run lint
+          yarn run lint
         env:
           CI: true
-
-
-
