--- a/package.json
+++ b/package.json
@@ -1,70 +1,81 @@
 {
-	"name": "homechow",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint",
-		"lint:fix": "eslint . --ext ts --ext tsx --ext js --fix",
-		"prettier:fix": "prettier --write '**/(*.js|.ts|.jsx|.tsx|.md)'",
-		"prettier:check": "prettier --check '**/(*.js|.ts|.jsx|.tsx|.md)'",
-		"coverage": "yarn test --coverage --watchAll --collectCoverageFrom=\"src/**/*.{ts,tsx,js,jsx}\"",
-		"prepare": "husky install",
-		"cypress:open": "cypress open",
-		"cypress:run": "cypress run"
-	},
-	"dependencies": {
-		"@next/font": "13.1.6",
-		"@tailwindcss/forms": "^0.5.3",
-		"@tailwindcss/typography": "^0.5.9",
-		"@types/node": "18.11.18",
-		"@types/react": "18.0.27",
-		"@types/react-dom": "18.0.10",
-		"autoprefixer": "^10.4.13",
-		"eslint": "8.33.0",
-		"eslint-config-next": "13.1.6",
-		"eslint-plugin-cypress": "^2.12.1",
-		"eslint-plugin-testing-library": "^5.10.0",
-		"next": "13.1.6",
-		"postcss": "latest",
-		"postcss-import": "^15.1.0",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"tailwindcss": "^3.2.4",
-		"typescript": "4.9.4"
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged"
-		}
-	},
-	"lint-staged": {
-		"src/**/*.{ts,tsx,js,jsx}": [
-			"yarn prettier:fix",
-			"yarn lint",
-			"git add ."
-		]
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^5.50.0",
-		"@typescript-eslint/parser": "^5.50.0",
-		"cypress": "^12.5.1",
-		"eslint-config-airbnb": "^19.0.4",
-		"eslint-config-prettier": "^8.6.0",
-		"eslint-plugin-import": "^2.27.5",
-		"eslint-plugin-jsx-a11y": "^6.7.1",
-		"eslint-plugin-prettier": "^4.2.1",
-		"eslint-plugin-react": "^7.32.2",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"husky": "^8.0.3",
-		"prettier": "^2.8.3"
-	}
+  "name": "homechow",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "lint:fix": "eslint . --ext ts --ext tsx --ext js --fix",
+    "prettier:fix": "prettier --write '**/(*.js|.ts|.jsx|.tsx|.md)'",
+    "prettier:check": "prettier --check '**/(*.js|.ts|.jsx|.tsx|.md)'",
+    "coverage": "yarn test --coverage --watchAll --collectCoverageFrom=\"src/**/*.{ts,tsx,js,jsx}\"",
+    "prepare": "husky install",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
+  },
+  "dependencies": {
+    "@apollo/explorer": "^2.0.2",
+    "@apollo/sandbox": "^1.0.3",
+    "@next/font": "13.1.6",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/micro-cors": "^0.1.3",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
+    "apollo-server-micro": "^3.11.1",
+    "autoprefixer": "^10.4.13",
+    "class-validator": "^0.14.0",
+    "diagnose-endpoint": "1.1.0",
+    "eslint": "8.33.0",
+    "eslint-config-next": "13.1.6",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-testing-library": "^5.10.0",
+    "graphql": "^15.3.0",
+    "micro": "^10.0.1",
+    "micro-cors": "^0.1.1",
+    "next": "13.1.6",
+    "postcss": "latest",
+    "postcss-import": "^15.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "reflect-metadata": "^0.1.13",
+    "tailwindcss": "^3.2.4",
+    "type-graphql": "^1.1.1",
+    "typescript": "4.9.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx,js,jsx}": [
+      "yarn prettier:fix",
+      "yarn lint",
+      "git add ."
+    ]
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "cypress": "^12.5.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
+    "prettier": "^2.8.3"
+  }
 }
