--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
+		"dev": "next dev -p :3003",
 		"build": "next build",
-		"start": "next start",
+		"start": "next start -p :3003",
 		"lint": "next lint",
 		"lint:fix": "eslint . --ext ts --ext tsx --ext js --fix",
 		"prettier:fix": "prettier --write '**/(*.js|.ts|.jsx|.tsx|.md)'",
@@ -13,7 +13,8 @@
 		"coverage": "yarn test --coverage --watchAll --collectCoverageFrom=\"src/**/*.{ts,tsx,js,jsx}\"",
 		"prepare": "husky install",
 		"cypress:open": "cypress open",
-		"cypress:run": "cypress run"
+		"cypress:run": "cypress run",
+		"cypress:ci": "start-server-and-test 'yarn dev' :3003 'yarn cypress:run'"
 	},
 	"dependencies": {
 		"@next/font": "13.1.6",
@@ -32,6 +33,7 @@
 		"postcss-import": "^15.1.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"start-server-and-test": "^1.15.3",
 		"tailwindcss": "^3.2.4",
 		"typescript": "4.9.4"
 	},
