--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,7 +104,7 @@ jobs:
           yarn install --frozen-lockfile
 
       - name: Cypress
-        run: yarn test:e2e
+        run: yarn cypress:ci
 
       - uses: actions/upload-artifact@v2
         if: failure()
