--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p :3003",
+    "dev": "next dev -p 3003",
 		"build": "next build",
-		"start": "next start -p :3003",
+		"start": "next start -p 3003",
     "lint": "next lint",
 		"lint:fix": "eslint . --ext ts --ext tsx --ext js --fix",
 		"prettier:fix": "prettier --write '**/(*.js|.ts|.jsx|.tsx|.md)'",
