--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
 		"start": "next start -p 3003",
 		"lint": "next lint",
 		"lint:fix": "eslint . --ext ts --ext tsx --ext js --fix",
-		"prettier:fix": "prettier --write '**/(*.js|.ts|.jsx|.tsx|.md)'",
-		"prettier:check": "prettier --check '**/(*.js|.ts|.jsx|.tsx|.md)'",
+		"prettier:fix": "prettier --write \"**/*.{ts,tsx,js,jsx}\"",
+        "prettier:check": "prettier --check \"**/*.{ts,tsx,js,jsx}\"",
 		"coverage": "yarn test --coverage --watchAll --collectCoverageFrom=\"src/**/*.{ts,tsx,js,jsx}\"",
 		"prepare": "husky install"
 	},
