--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
 		"lint": "next lint",
 		"lint:fix": "eslint . --ext ts --ext tsx --ext js --fix",
 		"prettier:fix": "prettier --write \"**/*.{ts,tsx,js,jsx}\"",
-        "prettier:check": "prettier --check \"**/*.{ts,tsx,js,jsx}\"",
+		"prettier:check": "prettier --check \"**/*.{ts,tsx,js,jsx}\"",
 		"coverage": "yarn test --coverage --watchAll --collectCoverageFrom=\"src/**/*.{ts,tsx,js,jsx}\"",
-		"prepare": "husky install"
+		"prepare": "husky install",
+		"cypress:open": "cypress open",
+		"cypress:run": "cypress run",
+		"cypress:ci": "start-server-and-test 'yarn dev' :3003 'yarn cypress:run'",
+		"storybook": "start-storybook -p 6006",
+		"build-storybook": "build-storybook"
 	},
 	"dependencies": {
 		"@next/font": "13.1.6",
@@ -21,28 +26,26 @@
 		"@types/react": "18.0.27",
 		"@types/react-dom": "18.0.10",
 		"autoprefixer": "^10.4.13",
-		"dotenv": "^16.0.3",
 		"eslint": "8.33.0",
 		"eslint-config-next": "13.1.6",
 		"eslint-plugin-cypress": "^2.12.1",
 		"eslint-plugin-testing-library": "^5.10.0",
-		"firebase": "^9.17.1",
 		"next": "13.1.6",
+		"firebase": "^9.17.1",
+		"dotenv": "^16.0.3",
 		"postcss": "latest",
 		"postcss-import": "^15.1.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"start-server-and-test": "^1.15.3",
 		"storybook": "^6.5.16",
-		"tailwindcss": "^3.2.4"
+		"start-server-and-test": "^1.15.3",
+		"tailwindcss": "^3.2.4",
+		"typescript": "4.9.4"
 	},
 	"husky": {
-		"prepare": "husky install",
-		"cypress:open": "cypress open",
-		"cypress:run": "cypress run",
-		"cypress:ci": "start-server-and-test 'yarn dev' :3003 'yarn cypress:run'",
-		"storybook": "start-storybook -p 6006",
-		"build-storybook": "build-storybook"
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
 	},
 	"lint-staged": {
 		"src/**/*.{ts,tsx,js,jsx}": [
@@ -70,15 +73,14 @@
 		"@typescript-eslint/eslint-plugin": "^5.50.0",
 		"@typescript-eslint/parser": "^5.50.0",
 		"cypress": "^12.5.1",
-		"eslint-config-airbnb": "^19.0.4",
+		"prettier": "^2.8.3",
+		"husky": "^8.0.3",
 		"eslint-config-prettier": "^8.6.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-config-airbnb": "^19.0.4",
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
-		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.32.2",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"husky": "^8.0.3",
-		"prettier": "^2.8.3",
-		"typescript": "^4.9.5"
+		"eslint-plugin-react-hooks": "^4.6.0"
 	}
 }
