--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@types/react": "18.0.27",
 		"@types/react-dom": "18.0.10",
 		"autoprefixer": "^10.4.13",
+		"classnames": "^2.3.2",
 		"eslint": "8.33.0",
 		"eslint-config-next": "13.1.6",
 		"eslint-plugin-cypress": "^2.12.1",
@@ -35,9 +36,9 @@
 		"postcss-import": "^15.1.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"start-server-and-test": "^1.15.3",
 		"storybook": "^6.5.16",
 		"swr": "^2.0.3",
-		"start-server-and-test": "^1.15.3",
 		"tailwindcss": "^3.2.4",
 		"typescript": "4.9.4"
 	},
