--- a/package.json
+++ b/package.json
@@ -25,19 +25,23 @@
 		"@types/node": "18.11.18",
 		"@types/react": "18.0.27",
 		"@types/react-dom": "18.0.10",
+		"@types/react-payment-inputs": "^1.1.0",
 		"autoprefixer": "^10.4.13",
 		"eslint": "8.33.0",
 		"eslint-config-next": "13.1.6",
 		"eslint-plugin-cypress": "^2.12.1",
 		"eslint-plugin-testing-library": "^5.10.0",
 		"next": "13.1.6",
+		"next-i18next": "^13.1.5",
 		"postcss": "latest",
 		"postcss-import": "^15.1.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-hook-form": "6.0.0-rc.5",
+		"react-payment-inputs": "^1.1.9",
+		"start-server-and-test": "^1.15.3",
 		"storybook": "^6.5.16",
 		"swr": "^2.0.3",
-		"start-server-and-test": "^1.15.3",
 		"tailwindcss": "^3.2.4",
 		"typescript": "4.9.4"
 	},
