--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
 		"eslint-config-next": "13.1.6",
 		"eslint-plugin-cypress": "^2.12.1",
 		"eslint-plugin-testing-library": "^5.10.0",
+		"i18next": "^22.4.10",
 		"next": "13.1.6",
+		"next-i18next": "^13.1.5",
 		"postcss": "latest",
 		"postcss-import": "^15.1.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-i18next": "^12.2.0",
 		"react-icons": "^4.7.1",
 		"start-server-and-test": "^1.15.3",
 		"storybook": "^6.5.16",
