--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,11 +20,6 @@
 			"react": ["./node_modules/@types/react"]
 		}
 	},
-	"include": [
-		"next-env.d.ts",
-		"**/*.ts",
-		"**/*.tsx",
-		"src/components/countdown/index.tsx"
-	],
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
 	"exclude": ["node_modules"]
 }
