--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
 	},
 	"dependencies": {
 		"@next/font": "13.1.6",
+		"@react-google-maps/api": "^2.12.2",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.9",
+		"@types/js-cookie": "^3.0.3",
 		"@types/node": "18.11.18",
 		"@types/react": "18.0.27",
 		"@types/react-datepicker": "^4.8.0",
 		"@types/react-dom": "18.0.10",
 		"@types/react-payment-inputs": "^1.1.0",
-		"@react-google-maps/api": "^2.12.2",
 		"autoprefixer": "^10.4.13",
 		"classnames": "^2.3.2",
 		"eslint": "8.33.0",
@@ -35,6 +36,7 @@
 		"eslint-plugin-cypress": "^2.12.1",
 		"eslint-plugin-testing-library": "^5.10.0",
 		"i18next": "^22.4.10",
+		"js-cookie": "^3.0.1",
 		"next": "13.1.6",
 		"next-i18next": "^13.1.5",
 		"postcss": "latest",
