--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,9 @@
 				"**/__tests__/**/*.[jt]s?(x)",
 				"**/?(*.)+(spec|test).[jt]s?(x)"
 			],
-			"extends": ["plugin:testing-library/react"]
+			"extends": [
+				"plugin:testing-library/react"
+			]
 		}
 	],
 	"parser": "@typescript-eslint/parser",
@@ -34,7 +36,11 @@
 		"ecmaVersion": "latest",
 		"sourceType": "module"
 	},
-	"plugins": ["react", "import", "@typescript-eslint"],
+	"plugins": [
+		"react",
+		"import",
+		"@typescript-eslint"
+	],
 	"rules": {
 		"import/extensions": [
 			"error",
@@ -62,21 +68,34 @@
 		"react/jsx-props-no-spreading": "off",
 		"react/jsx-filename-extension": [
 			1,
-			{ "extensions": [".js", ".jsx", ".ts", ".tsx"] }
+			{
+				"extensions": [
+					".js",
+					".jsx",
+					".ts",
+					".tsx"
+				]
+			}
 		],
-		"no-use-before-define": [0],
+		"no-use-before-define": [
+			0
+		],
 		"no-nested-ternary": "off",
 		"import/prefer-default-export": 0,
 		"react/display-name": 0,
 		"react/prop-types": 0,
-
 		"react/destructuring-assignment": 0,
 		"react/button-has-type": 0,
 		"react/function-component-definition": 0,
 		"react/no-array-index-key": 0,
 		"no-useless-catch": 0,
 		"import/no-extraneous-dependencies": 0,
-		"import/no-unresolved": [2, { "caseSensitive": false }],
+		"import/no-unresolved": [
+			2,
+			{
+				"caseSensitive": false
+			}
+		],
 		"react/no-unstable-nested-components": 0,
 		"@typescript-eslint/explicit-function-return-type": 0,
 		"@typescript-eslint/explicit-member-accessibility": 0,
@@ -91,19 +110,43 @@
 		"prefer-spread": 2,
 		"no-unused-expressions": [
 			2,
-			{ "allowShortCircuit": true, "allowTernary": true }
+			{
+				"allowShortCircuit": true,
+				"allowTernary": true
+			}
 		],
 		"no-return-assign": "off",
 		"no-underscore-dangle": "off",
-		"react/require-default-props": [2, { "ignoreFunctionalComponents": true }],
-		"no-param-reassign": ["error", { "props": false }]
+		"react/require-default-props": [
+			2,
+			{
+				"ignoreFunctionalComponents": true
+			}
+		],
+		"no-param-reassign": [
+			"error",
+			{
+				"props": false
+			}
+		]
 	},
-	"ignorePatterns": ["**/*.js", "/build/*.js"],
+	"ignorePatterns": [
+		"**/*.js",
+		"/build/*.js"
+	],
 	"settings": {
 		"import/resolver": {
 			"node": {
-				"extensions": [".js", ".jsx", ".ts", ".tsx"],
-				"moduleDirectory": ["node_modules", "src/"]
+				"extensions": [
+					".js",
+					".jsx",
+					".ts",
+					".tsx"
+				],
+				"moduleDirectory": [
+					"node_modules",
+					"src/"
+				]
 			}
 		}
 	}
