--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
 	"devDependencies": {
 		"@babel/core": "^7.20.12",
 		"@storybook/addon-actions": "^6.5.16",
+		"@storybook/addon-controls": "^6.5.16",
 		"@storybook/addon-essentials": "^6.5.16",
 		"@storybook/addon-interactions": "^6.5.16",
 		"@storybook/addon-links": "^6.5.16",
@@ -95,6 +96,7 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-storybook": "^0.6.11",
 		"husky": "^8.0.3",
 		"prettier": "^2.8.3"
 	}
