--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"react-number-format": "^4.9.3",
 		"react-payment-inputs": "^1.1.9",
 		"react-query": "^3.39.3",
+		"react-router-dom": "^6.9.0",
 		"react-tooltip": "^4.2.21",
 		"start-server-and-test": "^1.15.3",
 		"storybook": "^6.5.16",
