Fix: fix layout & header nav page issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 	"i18n-ally.localesPaths": ["public/locales"],
 	"i18n-ally.keystyle": "nested",
 	"cSpell.words": [
+		"comingsoon",
 		"Didnt"
 	]
 }
