--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.12",
+		"@cypress/react": "^7.0.2",
 		"@storybook/addon-actions": "^6.5.16",
 		"@storybook/addon-controls": "^6.5.16",
 		"@storybook/addon-essentials": "^6.5.16",
