--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
 		"coverage": "yarn test --coverage --watchAll --collectCoverageFrom=\"src/**/*.{ts,tsx,js,jsx}\"",
 		"prepare": "husky install",
 		"cypress:open": "cypress open",
-		"cypress:run": "cypress run",
+		"cypress:run": "cypress run --config-file cypress.config.ts",
 		"cypress:ci": "start-server-and-test 'yarn dev' 3003 'yarn cypress:run'",
-		"cypress:ct": "cypress open-ct",
 		"cypress:comp": "cypress run --config video=false --component",
 		"storybook": "start-storybook -p 6006",
 		"build-storybook": "build-storybook"
@@ -54,6 +53,7 @@
 		"react-query": "^3.39.3",
 		"react-router-dom": "^6.9.0",
 		"react-tooltip": "^4.2.21",
+		"sharp": "^0.31.3",
 		"start-server-and-test": "^1.15.3",
 		"storybook": "^6.5.16",
 		"swr": "^2.0.3",
