--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"coverage": "yarn test --coverage --watchAll --collectCoverageFrom=\"src/**/*.{ts,tsx,js,jsx}\"",
 		"prepare": "husky install",
 		"cypress:open": "cypress open",
-		"cypress:run": "cypress run --config-file cypress.config.ts",
+		"cypress:run": "cypress run",
 		"cypress:ci": "start-server-and-test 'yarn dev' 3003 'yarn cypress:run'",
 		"cypress:comp": "cypress run --config video=false --component",
 		"storybook": "start-storybook -p 6006",
@@ -40,8 +40,9 @@
 		"js-cookie": "^3.0.1",
 		"next": "13.1.6",
 		"next-i18next": "^13.1.5",
-		"postcss": "latest",
+		"postcss": "^8.4.21",
 		"postcss-import": "^15.1.0",
+		"postcss-loader": "^7.1.0",
 		"react": "18.2.0",
 		"react-datepicker": "^4.8.0",
 		"react-dom": "18.2.0",
@@ -83,9 +84,10 @@
 		"@cypress/react": "^7.0.2",
 		"@storybook/addon-actions": "^6.5.16",
 		"@storybook/addon-controls": "^6.5.16",
+		"@storybook/addon-docs": "^6.5.16",
 		"@storybook/addon-essentials": "^6.5.16",
 		"@storybook/addon-interactions": "^6.5.16",
-		"@storybook/addon-links": "^6.5.16",
+		"@storybook/addon-postcss": "^2.0.0",
 		"@storybook/builder-webpack5": "^6.5.16",
 		"@storybook/manager-webpack5": "^6.5.16",
 		"@storybook/react": "^6.5.16",
@@ -103,6 +105,7 @@
 		"eslint-plugin-storybook": "^0.6.11",
 		"husky": "^8.0.3",
 		"prettier": "^2.8.3",
+		"storybook-addon-next": "^1.7.3",
 		"webpack-cli": "^5.0.1"
 	}
 }
