--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"build-storybook": "build-storybook"
 	},
 	"dependencies": {
+		"@cypress/webpack-dev-server": "^3.3.1",
 		"@next/font": "13.1.6",
 		"@react-google-maps/api": "^2.12.2",
 		"@storybook/addon-docs": "^6.5.16",
@@ -38,6 +39,7 @@
 		"eslint-config-next": "13.1.6",
 		"eslint-plugin-cypress": "^2.12.1",
 		"eslint-plugin-testing-library": "^5.10.0",
+		"html-webpack-plugin": "5",
 		"i18next": "^22.4.10",
 		"js-cookie": "^3.0.1",
 		"next": "13.1.6",
@@ -45,7 +47,7 @@
 		"postcss": "^8.4.21",
 		"postcss-import": "^15.1.0",
 		"postcss-loader": "^7.1.0",
-		"react": "18.2.0",
+		"react": "^18.2.0",
 		"react-datepicker": "^4.8.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "6.0.0-rc.5",
@@ -62,7 +64,8 @@
 		"storybook-addon-next": "^1.7.3",
 		"swr": "^2.0.3",
 		"tailwindcss": "^3.2.4",
-		"typescript": "4.9.4"
+		"typescript": "4.9.4",
+		"webpack": "5"
 	},
 	"husky": {
 		"hooks": {
