--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"react-payment-inputs": "^1.1.9",
 		"react-query": "^3.39.3",
 		"react-router-dom": "^6.9.0",
+		"react-table": "^7.8.0",
 		"react-tooltip": "^4.2.21",
 		"sharp": "^0.31.3",
 		"start-server-and-test": "^1.15.3",
