--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"dependencies": {
 		"@cypress/webpack-dev-server": "^3.3.1",
+		"@mapbox/mapbox-gl-draw": "^1.4.1",
 		"@next/font": "13.1.6",
 		"@react-google-maps/api": "^2.12.2",
 		"@storybook/addon-docs": "^6.5.16",
@@ -53,6 +54,8 @@
 		"react-hook-form": "6.0.0-rc.5",
 		"react-i18next": "^12.2.0",
 		"react-icons": "^4.7.1",
+		"react-map-gl": "^7.0.21",
+		"react-map-gl-geocoder": "^2.2.0",
 		"react-number-format": "^4.9.3",
 		"react-payment-inputs": "^1.1.9",
 		"react-query": "^3.39.3",
@@ -63,6 +66,7 @@
 		"storybook": "^6.5.16",
 		"storybook-addon-next": "^1.7.3",
 		"swr": "^2.0.3",
+		"tailwind-scrollbar": "^3.0.0",
 		"tailwindcss": "^3.2.4",
 		"typescript": "4.9.4",
 		"webpack": "5"
@@ -100,6 +104,7 @@
 		"@storybook/testing-library": "^0.0.13",
 		"@typescript-eslint/eslint-plugin": "^5.50.0",
 		"@typescript-eslint/parser": "^5.50.0",
+		"css-loader": "^6.7.3",
 		"cypress": "^12.8.1",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-prettier": "^8.6.0",
@@ -110,9 +115,11 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-storybook": "^0.6.11",
 		"husky": "^8.0.3",
+		"mapbox-gl": "^2.13.0",
 		"msw": "^1.1.0",
 		"prettier": "^2.8.3",
 		"storybook-addon-next": "^1.7.3",
+		"style-loader": "^3.3.2",
 		"webpack-cli": "^5.0.1"
 	},
 	"msw": {
