adding the component

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
 		"eslint-plugin-cypress": "^2.12.1",
 		"eslint-plugin-testing-library": "^5.10.0",
 		"firebase": "^9.18.0",
-		"html-webpack-plugin": "^5.5.0",
+		"html-webpack-plugin": "^5.5.1",
 		"i18next": "^22.4.10",
 		"js-cookie": "^3.0.1",
 		"next": "13.1.6",
@@ -60,6 +60,7 @@
 		"react-map-gl": "^7.0.21",
 		"react-map-gl-geocoder": "^2.2.0",
 		"react-number-format": "^4.9.3",
+		"react-password-strength-bar": "^0.4.1",
 		"react-payment-inputs": "^1.1.9",
 		"react-query": "^3.39.3",
 		"react-router-dom": "^6.9.0",
