--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev -p 3003",
+		"start:prod": "env-cmd -f .env.production react-scripts start",
 		"build": "next build",
 		"start": "next start -p 3003",
 		"lint": "next lint",
