--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"postcss-loader": "^7.1.0",
 		"react": "^18.2.0",
 		"react-datepicker": "^4.8.0",
+		"react-time-picker": "^6.0.4",
 		"react-dom": "18.2.0",
 		"react-hook-form": "6.0.0-rc.5",
 		"react-i18next": "^12.2.0",
