--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -5,6 +5,7 @@ on: [push]
 jobs:
   e2e:
     runs-on: ubuntu-latest
+    name: E2E Test
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -25,6 +26,17 @@ jobs:
           done
       - name: Run E2E Tests
         run: yarn cypress:run
+      - uses: actions/checkout@v2
+      - uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: ./cypress/screenshots
+      - uses: actions/upload-artifact@v2
+        if: always()
+        with:
+          name: cypress-videos
+          path: ./cypress/videos
 
   component:
     runs-on: ubuntu-latest
