--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@types/react-datepicker": "^4.8.0",
 		"@types/react-dom": "18.0.10",
 		"@types/react-payment-inputs": "^1.1.0",
+		"add": "^2.0.6",
 		"autoprefixer": "^10.4.13",
 		"classnames": "^2.3.2",
 		"eslint": "8.33.0",
@@ -51,12 +52,14 @@
 		"react-number-format": "^4.9.3",
 		"react-payment-inputs": "^1.1.9",
 		"react-query": "^3.39.3",
+		"react-spinners": "^0.13.8",
 		"react-tooltip": "^4.2.21",
 		"start-server-and-test": "^1.15.3",
 		"storybook": "^6.5.16",
 		"swr": "^2.0.3",
 		"tailwindcss": "^3.2.4",
-		"typescript": "4.9.4"
+		"typescript": "4.9.4",
+		"yarn": "^1.22.19"
 	},
 	"husky": {
 		"hooks": {
