--- a/.github/workflows/cloud-run.yml
+++ b/.github/workflows/cloud-run.yml
@@ -1,9 +1,6 @@
 name: nextjs-cloud-run
 
-on:
-  push:
-    branches:
-      - prod
+on: [push]
 
 env:
   PROJECT_ID: ${{ secrets.CLOUD_RUN_PROJECT_NAME }}
