--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
 	},
 	"dependencies": {
 		"@cypress/webpack-dev-server": "^3.3.1",
+		"@emotion/react": "^11.11.1",
+		"@emotion/styled": "^11.11.0",
 		"@mapbox/mapbox-gl-draw": "^1.4.1",
+		"@mui/lab": "^5.0.0-alpha.134",
+		"@mui/material": "^5.13.5",
+		"@mui/x-date-pickers": "^6.9.0",
 		"@next/font": "13.1.6",
 		"@react-google-maps/api": "^2.12.2",
 		"@storybook/addon-docs": "^6.5.16",
@@ -65,6 +70,7 @@
 		"react-payment-inputs": "^1.1.9",
 		"react-query": "^3.39.3",
 		"react-router-dom": "^6.9.0",
+		"react-switch": "^7.0.0",
 		"react-table": "^7.8.0",
 		"react-tooltip": "^4.2.21",
 		"sharp": "^0.31.3",
